Fix the dimension of the pseudocodes on mobile

--- a/src/component/organisms/SortInfo/style.css
+++ b/src/component/organisms/SortInfo/style.css
@@ -47,13 +47,8 @@
   justify-content: center;
   align-items: center;
 
-  min-width: 400px;
   margin-top: 30px;
   padding: 20px;
-
-  column-count: 2;
-  column-gap: 40px;
-  column-width: 200px;
 
   background-color: rgba(0, 0, 0, 0.05);
   border-radius: 25px;
@@ -75,4 +70,15 @@
   font-weight: 400;
   line-height: 22px;
   color: var(--text-color);
+}
+
+@media screen and (max-width: 600px) {
+  .SortInfo__Description {
+    max-width: 100%;
+    overflow-x: scroll;
+  }
+  .SortInfo__Pseudocode {
+    font-size: x-small;
+    line-height: 15px;
+  }
 }
